--- a/Public/dashboard_main.html
+++ b/Public/dashboard_main.html
@@ -24,17 +24,17 @@
   table.projection-table { width:100%; border-collapse:collapse; margin-top:8px; }
   table.projection-table th, table.projection-table td { border:1px solid #2b3138; padding:6px; text-align:center; font-size:0.9rem; }
   table.projection-table th { color:#facc15; background:#0f1724; }
+  /* New style for input boxes */
+  .value-input { background:#111827; border:1px solid #374151; padding:8px; border-radius:6px; width:100%; color:#c9d1d9; }
 </style>
 </head>
 <body class="min-h-screen p-6">
 
-<!-- Simple access-code prompt (temporary, client-side) -->
 <script>
   const pwd = prompt("Enter access code:");
   if (pwd !== "SCOUT2025") { alert("Access denied."); window.location.href = "index.html"; }
 </script>
 
-<!-- Player modal -->
 <div id="playerModal" class="modal">
   <div class="max-w-3xl mx-auto mt-12 bg-gray-800 rounded-xl p-6 relative">
     <button id="closeModal" class="absolute top-4 right-4 text-gray-300 hover:text-white text-2xl">&times;</button>
@@ -44,13 +44,11 @@
 
 <div class="max-w-6xl mx-auto space-y-8">
 
-  <!-- Header -->
   <header class="text-center">
     <h1 class="text-4xl font-bold text-transparent bg-clip-text bg-gradient-to-r from-green-400 to-teal-500">MomentumScout Pro</h1>
     <p class="text-gray-400 mt-2">Advanced Player Scouting • Projections • Negotiation Guidance</p>
   </header>
 
-  <!-- Search -->
   <section class="bg-gray-800 border border-gray-700 rounded-xl p-6">
     <div class="flex gap-3 items-center">
       <input id="playerNameSearch" class="flex-1 rounded-md p-3 bg-gray-700 text-white border border-gray-600" placeholder="Search player (e.g. Lionel Messi)">
@@ -61,7 +59,6 @@
     <div id="playerSearchResults" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 mt-4"></div>
   </section>
 
-  <!-- Scouting Profile -->
   <section class="bg-gray-800 border border-gray-700 rounded-xl p-6">
     <div class="flex items-center justify-between">
       <h2 class="text-2xl font-semibold text-green-400">Scouting Profile</h2>
@@ -77,8 +74,7 @@
         <select id="position" class="w-full p-2 rounded-md bg-gray-700 border border-gray-600 text-white"></select>
 
         <div class="mt-4 space-y-3" id="coreSliders">
-          <!-- core sliders will be injected here -->
-        </div>
+          </div>
       </div>
 
       <div>
@@ -93,7 +89,6 @@
     </div>
   </section>
 
-  <!-- Results -->
   <section class="bg-gray-800 border border-gray-700 rounded-xl p-6">
     <h3 class="text-2xl font-semibold text-green-400 text-center">Top Player Recommendations</h3>
     <div class="mt-4 flex justify-center">
@@ -108,6 +103,8 @@
 <script>
 /* ------------- Configuration ------------- */
 const BACKEND_BASE = "https://momentumai-backend-g1ov.onrender.com/api"; // adjust if necessary
+const DEFAULT_VALUE_MIN = 100000;
+const DEFAULT_VALUE_MAX = 50000000;
 
 /* ------------- Elements ------------- */
 const posSelect = document.getElementById('position');
@@ -176,9 +173,10 @@ function populatePositions(){
     posSelect.appendChild(opt);
   });
 }
-// --- Build Core Sliders ---
+
+// --- Build Core Sliders (Adjusted) ---
 function buildCoreSliders() {
-  coreSliders.innerHTML = ''; // Clear existing
+  coreSliders.innerHTML = ''; 
 
   // Overall slider
   coreSliders.insertAdjacentHTML('beforeend', createSlider('Overall', 50, 99, 75, 95));
@@ -186,20 +184,20 @@ function buildCoreSliders() {
   // Age slider
   coreSliders.insertAdjacentHTML('beforeend', createSlider('Age', 16, 45, 20, 30));
 
-  // Value ($) slider
-  coreSliders.insertAdjacentHTML('beforeend', createSlider('Value ($)', 0, 99999999, 1000000, 50000000));
+  // Value ($) INPUT BOXES
+  coreSliders.insertAdjacentHTML('beforeend', createValueInputBlock('Value ($)', DEFAULT_VALUE_MIN, DEFAULT_VALUE_MAX));
 
   // Setup listeners for dynamic update
   setupSliderListeners();
+  setupValueInputListeners();
 }
 
 // --- Create Slider HTML ---
 function createSlider(attr, min = 0, max = 100, valMin = min, valMax = max) {
-  const formatVal = v => '$' + v.toLocaleString();
   return `
     <div class="mb-4">
       <label class="block text-sm mb-1 font-medium">${attr}: 
-        <span id="${attr}Val">${attr === 'Value ($)' ? formatVal(valMin) : valMin} - ${attr === 'Value ($)' ? formatVal(valMax) : valMax}</span>
+        <span id="${attr}Val">${valMin} - ${valMax}</span>
       </label>
       <input id="${attr}_min" type="range" min="${min}" max="${max}" value="${valMin}" class="attribute-slider mb-2">
       <input id="${attr}_max" type="range" min="${min}" max="${max}" value="${valMax}" class="attribute-slider">
@@ -207,7 +205,43 @@ function createSlider(attr, min = 0, max = 100, valMin = min, valMax = max) {
   `;
 }
 
-// --- Setup Slider Listeners for Dynamic Update ---
+// --- Create Value Input Block HTML ---
+function createValueInputBlock(attr, valMin, valMax) {
+  const fmt = v => '£' + v.toLocaleString();
+  return `
+    <div class="mb-4 fade-in">
+        <label class="block text-sm mb-1 font-medium">${attr} (GBP):</label>
+        <div class="grid grid-cols-2 gap-2">
+            <input id="${attr}_min" type="number" value="${valMin}" placeholder="Min (e.g. 100000)" class="value-input">
+            <input id="${attr}_max" type="number" value="${valMax}" placeholder="Max (e.g. 50000000)" class="value-input">
+        </div>
+        <div class="text-xs text-gray-500 mt-1">Min: <span id="${attr}MinDisplay">${fmt(valMin)}</span> | Max: <span id="${attr}MaxDisplay">${fmt(valMax)}</span></div>
+    </div>
+  `;
+}
+
+// --- Setup Value Input Listeners ---
+function setupValueInputListeners() {
+  const minInput = document.getElementById('Value ($)_min');
+  const maxInput = document.getElementById('Value ($)_max');
+  const minDisplay = document.getElementById('Value ($)MinDisplay');
+  const maxDisplay = document.getElementById('Value ($)MaxDisplay');
+
+  const formatDisplay = (v) => v ? '£' + Number(v).toLocaleString() : '—';
+
+  const updateDisplay = () => {
+    minDisplay.textContent = formatDisplay(minInput.value);
+    maxDisplay.textContent = formatDisplay(maxInput.value);
+  };
+
+  if (minInput) minInput.oninput = updateDisplay;
+  if (maxInput) maxInput.oninput = updateDisplay;
+  
+  // Initial display call
+  if (minInput) updateDisplay();
+}
+
+// --- Setup Slider Listeners for Dynamic Update (for non-Value sliders) ---
 function setupSliderListeners() {
   document.querySelectorAll('input[type="range"]').forEach(sl => {
     sl.oninput = () => {
@@ -221,11 +255,8 @@ function setupSliderListeners() {
         const id = sl.id.replace('_min', '').replace('_max', '');
         const min = parseInt(document.getElementById(`${id}_min`).value);
         const max = parseInt(document.getElementById(`${id}_max`).value);
-        if (id === 'Value ($)') {
-          span.textContent = '$' + min.toLocaleString() + ' - $' + max.toLocaleString();
-        } else {
-          span.textContent = `${min} - ${max}`;
-        }
+        // Note: This only handles non-Value sliders (Overall, Age) now
+        span.textContent = `${min} - ${max}`;
       }
     };
   });
@@ -244,6 +275,7 @@ function buildWeightSliders(pos){
 
 /* update visible spans when sliders move */
 function attachSliderListeners(){
+  // This function is still necessary to attach listeners to the dynamic sliders
   document.querySelectorAll('input[type="range"]').forEach(sl=>{
     sl.oninput = () => {
       if (sl.id.startsWith('w_')) {
@@ -263,23 +295,10 @@ function attachSliderListeners(){
 /* reset all sliders to defaults */
 function resetAll(){
   // rebuild full UI to known defaults
-  buildCoreSliders();
+  buildCoreSliders(); // This rebuilds core sliders AND the value input boxes to defaults
   buildPositionMetrics(posSelect.value);
   buildWeightSliders(posSelect.value);
-  attachSliderListeners();
-  document.querySelectorAll('input[type="range"]').forEach(sl=>{
-    // ensure displayed text updates
-    if (!sl.id.startsWith('w_')) {
-      const base = sl.id.replace('_min','').replace('_max','');
-      const min = document.getElementById(base + '_min')?.value || '';
-      const max = document.getElementById(base + '_max')?.value || '';
-      const span = document.getElementById(base + 'Val');
-      if (span) span.textContent = `${min} - ${max}`;
-    } else {
-      const span = document.getElementById(sl.id + '_val');
-      if (span) span.textContent = sl.value;
-    }
-  });
+  attachSliderListeners(); // Reattach listeners for dynamic sliders
 }
 
 /* ------------- Projection & Negotiation logic (frontend) ------------- */
@@ -336,12 +355,12 @@ async function safePost(endpoint, body){
     const resp = await fetch(BACKEND_BASE + endpoint, {
       method:'POST',
       headers: { 'Content-Type': 'application/json' },
-      body: JSON.stringify(playerNameSearch),
+      body: JSON.stringify(body), 
       mode: 'cors'
     });
     if (!resp.ok) {
       const text = await resp.text().catch(()=>'');
-      throw new Error(`Backend ${resp.status} ${text}`);
+      throw new Error(`Backend Status ${resp.status}: ${text}`);
     }
     return await resp.json();
   } catch(err) {
@@ -349,6 +368,86 @@ async function safePost(endpoint, body){
     throw err;
   }
 }
+
+/* --- Search player by name --- */
+searchBtn.onclick = async ()=>{
+  const q = playerNameSearch.value.trim();
+  if (!q) return;
+  playerSearchResults.innerHTML = '';
+  searchStatus.classList.remove('hidden');
+  searchStatus.textContent = 'Searching...';
+  try {
+    const payload = { player_name: q }; 
+    const data = await safePost('/search_player', payload);
+    
+    if (!data || !data.length) {
+      searchStatus.textContent = 'No results found.';
+      return;
+    }
+    searchStatus.textContent = `${data.length} player(s) found`;
+    data.forEach(pl=>{
+      const card = renderPlayerCard(pl, 999);
+      playerSearchResults.appendChild(card);
+    });
+  } catch(e){
+    console.error(e);
+    searchStatus.textContent = `⚠️ Failed to fetch from backend: ${e.message.substring(0, 50)}`;
+  }
+};
+
+
+/* --- Find top players --- */
+findBtn.onclick = async ()=>{
+  recommendations.innerHTML = '';
+  noResults.classList.add('hidden');
+  loadingIndicator.classList.remove('hidden');
+
+  try {
+    const pos = posSelect.value;
+    const body = { position: pos, filters:{}, weights:{} };
+
+    // CORE & METRICS: Collect all slider values AND the number inputs
+    document.querySelectorAll('#coreSliders input[type="range"], #dynamicMetrics input[type="range"], #coreSliders input[type="number"], #dynamicMetrics input[type="number"]').forEach(sl=>{
+      const base = sl.id.replace('_min','').replace('_max','').replace(' ($)',''); // Sanitize key for backend
+      const minEl = document.getElementById(base + '_min');
+      const maxEl = document.getElementById(base + '_max');
+      
+      // Ensure we only process min inputs once
+      if (sl.id.endsWith('_min') && minEl && maxEl) {
+          // Send values as raw number (for GBP/EUR)
+          body.filters[base] = [Number(minEl.value), Number(maxEl.value)];
+      }
+    });
+
+    // weights
+    document.querySelectorAll('#weightingSliders input[type="range"]').forEach(sl=>{
+      if (sl.id.startsWith('w_')){
+        const attr = sl.id.replace('w_','');
+        body.weights[attr] = Number(sl.value);
+      }
+    });
+
+    const data = await safePost('/find_players', body);
+    loadingIndicator.classList.add('hidden');
+
+    if (!data || !data.players || !data.players.length){
+      noResults.classList.remove('hidden');
+      return;
+    }
+
+    data.players.slice(0,5).forEach((p,i)=>{
+      const card = renderPlayerCard(p,i);
+      recommendations.appendChild(card);
+    });
+
+  } catch(e){
+    console.error(e);
+    loadingIndicator.classList.add('hidden');
+    noResults.classList.remove('hidden');
+    noResults.textContent = `⚠️ Could not load players — backend error: ${e.message.substring(0, 50)}`;
+  }
+};
+
 
 /* ------------- Render players ------------- */
 function renderPlayerCard(player, rankIndex){
@@ -398,7 +497,7 @@ function showPlayerModal(player){
   attributesHtml += `</div>`;
 
   // projection table
-  let projTable = `<table class="projection-table"><thead><tr><th>Year</th><th>Projected OVR</th><th>Projected Value (EUR)</th></tr></thead><tbody>`;
+  let projTable = `<table class="projection-table"><thead><tr><th>Year</th><th>Projected OVR</th><th>Projected Value (GBP)</th></tr></thead><tbody>`;
   projections.forEach(p => {
     projTable += `<tr><td>+${p.year}</td><td>${p.overall}</td><td>${fmtGBPFromEur(p.value)}</td></tr>`;
   });
@@ -431,91 +530,6 @@ function showPlayerModal(player){
   `;
   modal.style.display = 'block';
 }
-
-/* ------------- Event Handlers ------------- */
-posSelect.addEventListener('change', ()=>{
-  buildPositionMetrics(posSelect.value);
-  buildWeightSliders(posSelect.value);
-  attachSliderListeners();
-});
-
-resetBtn.addEventListener('click', resetAll);
-
-/* --- Search player by name --- */
-searchBtn.onclick = async ()=>{
-  const q = playerNameSearch.value.trim();
-  if (!q) return;
-  playerSearchResults.innerHTML = '';
-  searchStatus.classList.remove('hidden');
-  searchStatus.textContent = 'Searching...';
-  try {
-    const data = await safePost('/search_player', { name: q });
-    if (!data || !data.players || !data.players.length) {
-      searchStatus.textContent = 'No results found.';
-      return;
-    }
-    searchStatus.textContent = `${data.players.length} player(s) found`;
-    data.players.forEach(pl=>{
-      const card = renderPlayerCard(pl, 999);
-      playerSearchResults.appendChild(card);
-    });
-  } catch(e){
-    console.error(e);
-    searchStatus.textContent = '⚠️ Failed to fetch from backend (check CORS / Render status)';
-  }
-};
-
-/* --- Find top players --- */
-findBtn.onclick = async ()=>{
-  recommendations.innerHTML = '';
-  noResults.classList.add('hidden');
-  loadingIndicator.classList.remove('hidden');
-
-  try {
-    const pos = posSelect.value;
-    const body = { position: pos, filters:{}, weights:{} };
-    // core
-    document.querySelectorAll('#coreSliders input[type="range"]').forEach(sl=>{
-      const base = sl.id.replace('_min','').replace('_max','');
-      const minEl = document.getElementById(base+'_min');
-      const maxEl = document.getElementById(base+'_max');
-      if (minEl && maxEl) body.filters[base] = [Number(minEl.value), Number(maxEl.value)];
-    });
-    // metrics
-    document.querySelectorAll('#dynamicMetrics input[type="range"]').forEach(sl=>{
-      const base = sl.id.replace('_min','').replace('_max','');
-      const minEl = document.getElementById(base+'_min');
-      const maxEl = document.getElementById(base+'_max');
-      if (minEl && maxEl) body.filters[base] = [Number(minEl.value), Number(maxEl.value)];
-    });
-    // weights
-    document.querySelectorAll('#weightingSliders input[type="range"]').forEach(sl=>{
-      if (sl.id.startsWith('w_')){
-        const attr = sl.id.replace('w_','');
-        body.weights[attr] = Number(sl.value);
-      }
-    });
-
-    const data = await safePost('/find_players', body);
-    loadingIndicator.classList.add('hidden');
-
-    if (!data || !data.players || !data.players.length){
-      noResults.classList.remove('hidden');
-      return;
-    }
-
-    data.players.slice(0,5).forEach((p,i)=>{
-      const card = renderPlayerCard(p,i);
-      recommendations.appendChild(card);
-    });
-
-  } catch(e){
-    console.error(e);
-    loadingIndicator.classList.add('hidden');
-    noResults.classList.remove('hidden');
-    noResults.textContent = '⚠️ Could not load players — backend CORS or network issue.';
-  }
-};
 
 /* ------------- Boot ------------- */
 populatePositions();
