--- a/Public/dashboard_main.html
+++ b/Public/dashboard_main.html
@@ -130,17 +130,61 @@ window.addEventListener('click', (e)=> { if (e.target === modal) modal.style.dis
 /* ------------- Position metrics (same as backend mapping) ------------- */
 const POSITIONS = ['GK','CB','LB','RB','CDM','CM','CAM','RW','LW','CF','ST'];
 const POSITION_METRICS = {
-  'GK': { display:['goalkeeping_diving','goalkeeping_handling','goalkeeping_kicking','goalkeeping_positioning','goalkeeping_reflexes'], weights:['goalkeeping_diving','goalkeeping_handling','goalkeeping_kicking','goalkeeping_positioning','goalkeeping_reflexes'] },
-  'CB': { display:['pace','passing','defending','power_strength','power_jumping','mentality_interceptions','mentality_positioning','defending_marking_awareness','defending_standing_tackle','defending_sliding_tackle','attacking_crossing'], weights:['pace','passing','defending'] },
-  'LB': { display:['pace','passing','defending','power_strength','power_jumping','mentality_interceptions','mentality_positioning','defending_marking_awareness','defending_standing_tackle','defending_sliding_tackle','attacking_crossing'], weights:['pace','passing','defending'] },
-  'RB': { display:['pace','passing','defending','power_strength','power_jumping','mentality_interceptions','mentality_positioning','defending_marking_awareness','defending_standing_tackle','defending_sliding_tackle','attacking_crossing'], weights:['pace','passing','defending'] },
-  'CDM':{ display:['pace','passing','dribbling','defending','physic','mentality_interceptions','mentality_positioning','defending_standing_tackle','defending_sliding_tackle'], weights:['pace','passing','dribbling','defending','physic'] },
-  'CM': { display:['pace','passing','dribbling','defending','physic','power_stamina','power_strength','mentality_vision'], weights:['pace','passing','dribbling','defending','physic'] },
-  'CAM':{ display:['pace','shooting','passing','dribbling','power_long_shots','mentality_vision','mentality_penalties'], weights:['pace','shooting','passing','dribbling'] },
-  'RW': { display:['pace','shooting','passing','dribbling','power_long_shots','skill_curve','skill_fk_accuracy','movement_acceleration','movement_sprint_speed'], weights:['pace','shooting','passing','dribbling'] },
-  'LW': { display:['pace','shooting','passing','dribbling','power_long_shots','skill_curve','skill_fk_accuracy','movement_acceleration','movement_sprint_speed'], weights:['pace','shooting','passing','dribbling'] },
-  'CF': { display:['pace','shooting','passing','dribbling','power_shot_power','power_jumping','mentality_positioning','mentality_composure'], weights:['pace','shooting','passing','dribbling'] },
-  'ST': { display:['pace','shooting','dribbling','power_shot_power','power_jumping','power_strength','mentality_positioning','attacking_finishing'], weights:['pace','shooting','dribbling'] }
+  // Goalkeeper (GK)
+  'GK': { 
+    display:['goalkeeping_diving','goalkeeping_handling','goalkeeping_kicking','goalkeeping_positioning','goalkeeping_reflexes'], 
+    weights:['goalkeeping_diving','goalkeeping_handling','goalkeeping_kicking','goalkeeping_positioning','goalkeeping_reflexes'] 
+  },
+  // Centre Back (CB)
+  'CB': { 
+    display:['defending_marking_awareness','defending_standing_tackle','defending_sliding_tackle','power_strength','power_jumping','mentality_interceptions','pace','passing'], 
+    weights:['defending','physic','pace','passing'] 
+  },
+  // Left Back (LB)
+  'LB': { 
+    display:['defending_marking_awareness','defending_standing_tackle','defending_sliding_tackle','pace','passing','attacking_crossing'], 
+    weights:['pace','passing','defending', 'attacking_crossing'] 
+  },
+  // Right Back (RB)
+  'RB': { 
+    display:['defending_marking_awareness','defending_standing_tackle','defending_sliding_tackle','pace','passing','attacking_crossing'], 
+    weights:['pace','passing','defending', 'attacking_crossing'] 
+  },
+  // Defensive Midfielder (CDM)
+  'CDM':{ 
+    display:['defending_standing_tackle','mentality_interceptions','passing','physic','power_stamina','power_strength','mentality_vision'], 
+    weights:['pace','passing','defending','physic'] 
+  },
+  // Central Midfielder (CM)
+  'CM': { 
+    display:['passing','dribbling','shooting','defending','power_stamina','mentality_vision','skill_long_passing','skill_ball_control'], 
+    weights:['pace','passing','dribbling','defending','physic'] 
+  },
+  // Attacking Midfielder (CAM)
+  'CAM':{ 
+    display:['passing','dribbling','shooting','mentality_vision','skill_curve','skill_fk_accuracy','movement_agility'], 
+    weights:['pace','shooting','passing','dribbling'] 
+  },
+  // Right Winger (RW)
+  'RW': { 
+    display:['pace','dribbling','shooting','passing','movement_acceleration','movement_sprint_speed','attacking_crossing','skill_ball_control'], 
+    weights:['pace','shooting','passing','dribbling', 'attacking_crossing'] 
+  },
+  // Left Winger (LW)
+  'LW': { 
+    display:['pace','dribbling','shooting','passing','movement_acceleration','movement_sprint_speed','attacking_crossing','skill_ball_control'], 
+    weights:['pace','shooting','passing','dribbling', 'attacking_crossing'] 
+  },
+  // Centre Forward (CF)
+  'CF': { 
+    display:['shooting','dribbling','passing','mentality_positioning','attacking_finishing','power_shot_power'], 
+    weights:['pace','shooting','passing','dribbling', 'mentality_positioning'] 
+  },
+  // Striker (ST)
+  'ST': { 
+    display:['shooting','pace','dribbling','attacking_finishing','power_shot_power','power_strength','movement_acceleration', 'mentality_positioning'],
+    weights:['pace','shooting','dribbling', 'mentality_positioning', 'attacking_finishing']
+  }
 };
 
 /* ------------- Helpers: DOM building ------------- */
@@ -414,7 +458,7 @@ findBtn.onclick = async ()=>{
 
     // CORE & METRICS: Collect all slider values AND the number inputs
     document.querySelectorAll('#coreSliders input[type="range"], #dynamicMetrics input[type="range"], #coreSliders input[type="number"], #dynamicMetrics input[type="number"]').forEach(sl=>{
-      const base = sl.id.replace('_min','').replace('_max','').replace(' ($)',''); // Sanitize key for backend
+      const base = sl.id.replace('_min','').replace('_max','');
       const minEl = document.getElementById(base + '_min');
       const maxEl = document.getElementById(base + '_max');
       
@@ -538,12 +582,21 @@ function showPlayerModal(player){
 }
 
 /* ------------- Boot ------------- */
-populatePositions();
-buildCoreSliders();
-buildPositionMetrics('ST');
-buildWeightSliders('ST');
-attachSliderListeners();
+function fullBoot(){
+    populatePositions();
+    posSelect.addEventListener('change', ()=>{
+        buildPositionMetrics(posSelect.value);
+        buildWeightSliders(posSelect.value);
+        attachSliderListeners();
+    });
+    // Initial build for ST position
+    buildCoreSliders();
+    buildPositionMetrics('ST');
+    buildWeightSliders('ST');
+    attachSliderListeners();
+}
 
+fullBoot();
 </script>
 </body>
 </html>
