--- a/Public/Landing_Page.html
+++ b/Public/Landing_Page.html
@@ -142,6 +142,7 @@ const formMessage = document.getElementById('formMessage');
 
 demoForm.addEventListener('submit', async (e) => {
   e.preventDefault();
+
   const data = {
     fullName: demoForm.fullName.value,
     email: demoForm.email.value,
@@ -150,39 +151,27 @@ demoForm.addEventListener('submit', async (e) => {
   };
 
   try {
-    const response = await fetch(
-      'https://momentumai-backend-g1ov.onrender.com/api/submit_demo',
-      {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify(data)
-      }
-    );
-
-    if (response.ok) {
-  window.location.href = '/dashboard.html';
-} else {
-  alert('There was an issue submitting your form. Please try again.');
-}
-
+    const response = await fetch('https://momentumai-backend-g1ov.onrender.com/api/submit_demo', {
+      method: 'POST',
+      headers: { 'Content-Type': 'application/json' },
+      body: JSON.stringify(data)
+    });
 
     const result = await response.json();
+
     if (result.success) {
-      formMessage.classList.remove('hidden');
-      formMessage.innerHTML = `
-        ✅ Thank you, ${data.fullName}!<br>
-        Your demo dashboard will be sent shortly.
-      `;
-      demoForm.reset();
+      // Redirect to a welcome page
+      window.location.href = 'welcome.html?name=' + encodeURIComponent(data.fullName);
     } else {
-      throw new Error(result.message || 'Error submitting form.');
+      alert(result.message || 'There was an issue submitting your form. Please try again.');
     }
 
   } catch (error) {
-    console.error("Error submitting form:", error);
-    alert("There was an error submitting the form. Please try again.");
+    console.error('Error submitting form:', error);
+    alert('There was an error submitting the form. Please try again.');
   }
 });
+
 
 </script>
 </body>
