--- a/Public/Landing_Page.html
+++ b/Public/Landing_Page.html
@@ -161,7 +161,7 @@ demoForm.addEventListener('submit', async (e) => {
 
     if (result.success) {
       // Redirect to a welcome page
-      window.location.href = 'welcome.html?name=' + encodeURIComponent(data.fullName);
+      window.location.href = 'https://momentumai-frontend.onrender.com/welcome.html' + encodeURIComponent(data.fullName);
     } else {
       alert(result.message || 'There was an issue submitting your form. Please try again.');
     }
