--- a/Public/Landing_Page.html
+++ b/Public/Landing_Page.html
@@ -126,51 +126,60 @@ body { font-family: 'Inter', sans-serif; }
 </footer>
 
 <script>
-/* ---------- Carousel ---------- */
-const track = document.querySelector('.carousel-track');
-const slides = Array.from(track.children);
-const nextBtn = document.querySelector('.carousel-button.next');
-const prevBtn = document.querySelector('.carousel-button.prev');
-let index = 0;
-function updateCarousel() { track.style.transform = `translateX(-${index * 100}%)`; }
-nextBtn.addEventListener('click', () => { index = (index + 1) % slides.length; updateCarousel(); });
-prevBtn.addEventListener('click', () => { index = (index - 1 + slides.length) % slides.length; updateCarousel(); });
-
-/* ---------- Demo Form Submission ---------- */
-const demoForm = document.getElementById('demoForm');
-const formMessage = document.getElementById('formMessage');
-
-demoForm.addEventListener('submit', async (e) => {
-  e.preventDefault();
-
-  const data = {
-    fullName: demoForm.fullName.value,
-    email: demoForm.email.value,
-    organization: demoForm.organization.value,
-    demoAccess: demoForm.demoAccess.checked
-  };
-
-  try {
-    const response = await fetch('https://momentumai-backend-g1ov.onrender.com/api/submit_demo', {
-      method: 'POST',
-      headers: { 'Content-Type': 'application/json' },
-      body: JSON.stringify(data)
-    });
-
-    const result = await response.json();
-
-    if (result.success) {
-      // Redirect to a welcome page
-      window.location.href = 'https://momentumai-frontend.onrender.com/welcome.html'
-    } else {
-      alert(result.message || 'There was an issue submitting your form. Please try again.');
-    }
-
-  } catch (error) {
-    console.error('Error submitting form:', error);
-    alert('There was an error submitting the form. Please try again.');
+  /* ---------- Carousel ---------- */
+  const track = document.querySelector('.carousel-track');
+  const slides = Array.from(track.children);
+  const nextBtn = document.querySelector('.carousel-button.next');
+  const prevBtn = document.querySelector('.carousel-button.prev');
+  let index = 0;
+  function updateCarousel() { 
+    track.style.transform = `translateX(-${index * 100}%)`; 
   }
-});
-</script>
-</body>
-</html>
+  nextBtn.addEventListener('click', () => { 
+    index = (index + 1) % slides.length; 
+    updateCarousel(); 
+  });
+  prevBtn.addEventListener('click', () => { 
+    index = (index - 1 + slides.length) % slides.length; 
+    updateCarousel(); 
+  });
+  
+  /* ---------- Demo Form Submission ---------- */
+  const demoForm = document.getElementById('demoForm');
+  const formMessage = document.getElementById('formMessage');
+  
+  demoForm.addEventListener('submit', async (e) => {
+    e.preventDefault();
+  
+    const data = {
+      fullName: demoForm.fullName.value.trim(),
+      email: demoForm.email.value.trim(),
+      organization: demoForm.organization.value.trim(),
+      demoAccess: demoForm.demoAccess.checked
+    };
+  
+    try {
+      const response = await fetch('https://momentumai-backend-g1ov.onrender.com/api/submit_demo', {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify(data)
+      });
+  
+      const result = await response.json();
+  
+      if (result.success) {
+        // ✅ Redirect to welcome page with the user's name as a query parameter
+        window.location.href = `/welcome.html?name=${encodeURIComponent(data.fullName)}`;
+      } else {
+        alert(result.message || 'There was an issue submitting your form. Please try again.');
+      }
+  
+    } catch (error) {
+      console.error('Error submitting form:', error);
+      alert('There was an error submitting the form. Please try again.');
+    }
+  });
+  </script>
+  </body>
+  </html>
+  
