--- a/Public/Landing_Page.html
+++ b/Public/Landing_Page.html
@@ -10,6 +10,7 @@
 body { font-family: 'Inter', sans-serif; }
 .gradient-bg { background: linear-gradient(90deg,#2eb872,#38b2ac); }
 .container { max-width: 900px; }
+
 /* Carousel */
 .carousel { position: relative; overflow: hidden; }
 .carousel-track { display: flex; transition: transform 0.5s ease-in-out; }
@@ -48,7 +49,7 @@ body { font-family: 'Inter', sans-serif; }
     </ul>
   </div>
   <div class="flex justify-center">
-    <img src="assets/momentumailogo.png"
+    <img src="assets/Main Logo.png"
          alt="MomentumScout Logo"
          class="rounded-xl shadow-lg border border-gray-600"
          style="width:300px;height:300px;object-fit:contain;">
@@ -80,10 +81,9 @@ body { font-family: 'Inter', sans-serif; }
     Watch a quick explainer video to understand how our AI scouting works and how it can save your club or agency hours of work.
   </p>
   <video controls class="mx-auto rounded-xl shadow-lg border border-gray-600 max-w-full">
-    <source src="https://momentumai-backend-g1ov.onrender.com/assets/MomentumScoutAIDemo.mp4" type="video/mp4">
+    <source src="assets/MomentumScoutAIDemo.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
-  
 </section>
 
 <section id="signup" class="container mx-auto px-6 py-16 bg-gray-800 rounded-xl shadow-lg border border-gray-600">
@@ -118,7 +118,9 @@ body { font-family: 'Inter', sans-serif; }
     </button>
   </form>
 
-  <div id="formMessage" class="text-center mt-4 text-green-400 hidden"></div>
+  <div id="formMessage" class="text-center mt-4 text-green-400 hidden">
+    Thank you! Your request has been submitted.
+  </div>
 </section>
 
 <footer class="container mx-auto px-6 py-12 text-center text-gray-400">
@@ -126,58 +128,65 @@ body { font-family: 'Inter', sans-serif; }
 </footer>
 
 <script>
-  /* ---------- Carousel ---------- */
-  const track = document.querySelector('.carousel-track');
-  const slides = Array.from(track.children);
-  const nextBtn = document.querySelector('.carousel-button.next');
-  const prevBtn = document.querySelector('.carousel-button.prev');
-  let index = 0;
-  function updateCarousel() { 
-    track.style.transform = `translateX(-${index * 100}%)`; 
-  }
-  nextBtn.addEventListener('click', () => { 
-    index = (index + 1) % slides.length; 
-    updateCarousel(); 
-  });
-  prevBtn.addEventListener('click', () => { 
-    index = (index - 1 + slides.length) % slides.length; 
-    updateCarousel(); 
-  });
-  
-  /* ---------- Demo Form Submission ---------- */
-  const demoForm = document.getElementById('demoForm');
-  
-  demoForm.addEventListener('submit', async (e) => {
-    e.preventDefault();
-  
-    const data = {
-      fullName: demoForm.fullName.value.trim(),
-      email: demoForm.email.value.trim(),
-      organization: demoForm.organization.value.trim(),
-      demoAccess: demoForm.demoAccess.checked
-    };
-  
-    try {
-      const response = await fetch('https://momentumai-backend-g1ov.onrender.com/api/submit_demo', {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify(data)
-      });
-  
-      const result = await response.json();
-  
-      if (result.success) {
-  // Redirect to welcome page with the user's name as a query parameter
-  window.location.href = `/welcome.html?name=${encodeURIComponent(data.fullName)}`;
-} else {
-  alert(result.message || 'There was an issue submitting your form. Please try again.');
+/* ---------- Carousel ---------- */
+const track = document.querySelector('.carousel-track');
+const slides = Array.from(track.children);
+const nextBtn = document.querySelector('.carousel-button.next');
+const prevBtn = document.querySelector('.carousel-button.prev');
+let index = 0;
+
+function updateCarousel() {
+  track.style.transform = `translateX(-${index * 100}%)`;
 }
 
-  
-    } catch (error) {
-      console.error('Error submitting form:', error);
-      alert('There was an error submitting the form. Please try again.');
+nextBtn.addEventListener('click', () => {
+  index = (index + 1) % slides.length;
+  updateCarousel();
+});
+
+prevBtn.addEventListener('click', () => {
+  index = (index - 1 + slides.length) % slides.length;
+  updateCarousel();
+});
+
+/* ---------- Demo Form Submission ---------- */
+const demoForm = document.getElementById('demoForm');
+const formMessage = document.getElementById('formMessage');
+
+demoForm.addEventListener('submit', async (e) => {
+  e.preventDefault();
+
+  const data = {
+    fullName: demoForm.fullName.value.trim(),
+    email: demoForm.email.value.trim(),
+    organization: demoForm.organization.value.trim(),
+    demoAccess: demoForm.demoAccess.checked
+  };
+
+  try {
+    const response = await fetch('https://momentumai-backend-g1ov.onrender.com/api/submit_demo', {
+      method: 'POST',
+      headers: { 'Content-Type': 'application/json' },
+      body: JSON.stringify(data)
+    });
+
+    if (!response.ok) throw new Error('Network response was not ok');
+
+    const result = await response.json();
+    console.log("Submission result:", result);
+
+    if (result.success) {
+      // ✅ Redirect to welcome page at root
+      window.location.href = `/welcome.html?name=${encodeURIComponent(data.fullName)}`;
+    } else {
+      throw new Error(result.message || 'Error submitting form.');
     }
-  });
-  </script>
-  
+
+  } catch (error) {
+    console.error("Error submitting form:", error);
+    alert("There was an error submitting the form. Please try again.");
+  }
+});
+</script>
+</body>
+</html>
