--- a/Public/dashboard_main.html
+++ b/Public/dashboard_main.html
@@ -557,27 +557,35 @@ function showPlayerModal(player){
   const negotiationHtml = `<div class="mt-3 text-sm text-gray-300">Negotiation guidance (based on projection): <div class="mt-1 font-semibold text-green-200">${fmtGBPFromEur(negotiation.min)} — ${fmtGBPFromEur(negotiation.max)}</div></div>`;
 
   modalInner.innerHTML = `
-    <div class="space-y-4">
-      <div class="flex items-center gap-4">
-        <img src="${player.player_face_url || 'https://via.placeholder.com/120'}" class="w-24 h-24 rounded-full border-2 border-green-500">
-        <div>
-          <h3 class="text-2xl font-bold text-green-300">${player.short_name}</h3>
-          <div class="text-sm text-gray-300">${player.club_position} • Age: ${age} • OVR: ${player.overall}</div>
-          <div class="text-sm text-gray-400 mt-1">Value: ${fmtGBPFromEur(player.value_eur || 0)}</div>
+  <div class="space-y-4">
+    <div class="flex items-center gap-4">
+      <img src="${player.player_face_url || 'https://via.placeholder.com/120'}" class="w-24 h-24 rounded-full border-2 border-green-500">
+      <div>
+        <h3 class="text-2xl font-bold text-green-300">${player.short_name}</h3>
+        <div class="text-sm text-gray-300">${player.club_position} • Age: ${age} • OVR: ${player.overall}</div>
+        <div class="text-sm text-gray-400 mt-1">Value: ${fmtGBPFromEur(player.value_eur || 0)}</div>
+      </div>
+    </div>
+
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+      <div>
+        <h4 class="text-sm text-gray-300 mb-2">Projections</h4>
+        <div class="p-3 bg-gray-900 rounded">
+          ${projTable}
+          ${negotiationHtml}
         </div>
       </div>
 
-      <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
-        <div>
-        <h4 class="text-sm text-gray-300 mb-2">Projections</h4>
-          <div class="p-3 bg-gray-900 rounded">
-            ${projTable}
-            ${negotiationHtml}
-          </div>
+      <div>
+        <h4 class="text-sm text-gray-300 mb-2">Full Attributes</h4>
+        <div class="p-3 bg-gray-900 rounded max-h-96 overflow-auto">
+          ${attributesHtml}
         </div>
       </div>
     </div>
-  `;
+  </div>
+`;
+
   modal.style.display = 'block';
 }
 
